1. Corrected comments. 2. Fiddled with spacing. 3. Renamed "site-illo" to "page-header-illo" for correctness and consistency in CSS.

--- a/css/stories-last-redoubt.scss
+++ b/css/stories-last-redoubt.scss
@@ -84,7 +84,7 @@ h5,
 h6 {
     font-family: $heading-font;
     color: $phosphor-green;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 body {
@@ -169,8 +169,7 @@ figure.site-logo figcaption {
     margin-right: 1rem;
 }
 
-/* Martin Isitt's warrior outside the Redoubt. */
-figure.site-illo {
+figure.page-header-illo {
     margin-left: 3%;
     margin-right: 3%;
 }
